--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 </div>
             </div>
             <br>
-            <p class="text-center">Copyright &copy; by Muhammad Wirasena Ichsan Putra - 119140127</p>
+            <p class="text-center">Muhammad Wirasena Ichsan Putra - 119140127</p>
         </div>
     </div>
     <script src="index.js"></script>
